--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   "homepage": "https://github.com/tea-node-ts/tea-cache-ts#readme",
   "devDependencies": {
     "@types/jest": "^24.0.15",
+    "@types/lodash": "^4.14.136",
+    "@types/redis": "^2.8.13",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
     "eslint": "^6.1.0",
@@ -45,5 +47,9 @@
   },
   "files": [
     "lib/**/*"
-  ]
+  ],
+  "dependencies": {
+    "lodash": "^4.17.15",
+    "redis": "^2.8.0"
+  }
 }
